# game-of-life

./: .gitignore  README.md  meson.build
include/: application.hpp  defs.hpp  vars.hpp
src/: application.cpp  grid.cpp  main.cpp
